# isambard-onboarding-sample

./: .gitignore  CLAUDE.md  README.md  isambard_interactive_inference.ipynb  llm_playground.ipynb  llm_playground_executed.ipynb  pyproject.toml  serve_vllm.sh  setup_compute_node.sh  setup_environment.sh  setup_login_node.sh  teardown.sh  tunnel.sbatch
logs/: example_code_tunnel_logs.out
